third_party/rust/cxx/v1/crate/tests/ui/fallible_fnptr.stderr
error: function pointer returning Result is not supported yet
 --> $DIR/fallible_fnptr.rs:4:24
  |
4 |         fn f(callback: fn() -> Result<()>);
  |                        ^^^^^^^^^^^^^^^^^^
