third_party/rust/cxx/v1/crate/tests/ui/fallible_fnptr.rs
#[cxx::bridge]
mod ffi {
    unsafe extern "C++" {
        fn f(callback: fn() -> Result<()>);
    }
}

fn main() {}
